src/objects/AMA_Sales_Rep_Rate__mdt.object
<CustomObject>
    <description>CLM-MC-CLMCMA-10591- This object stores the sales rep tier and rates</description>
    <fields>
        <fullName>AMA_Data_File_Definition__c</fullName>
        <description>Reference to Header Object</description>
        <label>AMA Data File Definition</label>
        <referenceTo>AMA_Data_File_Definition__mdt</referenceTo>
        <relationshipLabel>AMA Sales Rep Rates</relationshipLabel>
        <relationshipName>AMA_Sales_Rep_Rates</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Year__c</fullName>
        <description>Year the field name is effective</description>
        <label>Effective Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_End__c</fullName>
        <description>Tier End Range</description>
        <label>Range End</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_Start__c</fullName>
        <description>Tier Start Range</description>
        <label>Range Start</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Cost__c</fullName>
        <description>Cost for the tier</description>
        <label>Sales Rep Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Tier__c</fullName>
        <label>Sales Rep Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                    <default>true</default>
                    <label>0-10</label>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-650</fullName>
                </value>
                <value>
                    <fullName>651-950</fullName>
                </value>
                <value>
                    <fullName>951-1400</fullName>
                </value>
                <value>
                    <fullName>1401-1750</fullName>
                </value>
                <value>
                    <fullName>1751-2900</fullName>
                </value>
                <value>
                    <fullName>2901-3999</fullName>
                </value>
                <value>
                    <fullName>4000 and greater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Range__c</fullName>
        <description>Tier range</description>
        <label>Tier Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>AMA Sales Rep Rate</label>
    <pluralLabel>AMA Sales Rep Rates</pluralLabel>
</CustomObject>